running example, a very long way to compute 5+3

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 <pre id="notes">
 
 </pre>
-<script src="/caleydo_web.js"></script>
+<script src="/caleydo_web.js" data-app="./test.js"></script>
 
 </body>
 </html>
